--- a/src/app/components/task-table/task-table.component.html
+++ b/src/app/components/task-table/task-table.component.html
@@ -53,20 +53,22 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
 
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 20]"
-        showFirstLastButtons
-        aria-label="Select page of tasks elements"
-      >
-      </mat-paginator>
+
     </div>
 
-    <div class="d-flex gap-3 mt-3">
-      <button mat-raised-button color="primary" (click)="handleDoneTasks()" >
-        <mat-icon> done </mat-icon> Done all
-      </button>
-      <button mat-raised-button color="warn" (click)="handleDeleteTasks()" >
-        <mat-icon> delete </mat-icon> Delete all
+    <div class="d-flex gap-3 mt-3 justify-content-between">
+      <div class="d-flex gap-2">
+        <button mat-raised-button color="warn" (click)="handleDeleteTasks()">
+          <mat-icon> delete </mat-icon> Delete all
+        </button>
+
+        <button mat-raised-button color="green" (click)="handleDoneTasks()">
+          <mat-icon> done </mat-icon> Done all
+        </button>
+      </div>
+
+      <button mat-raised-button color="primary" (click)="openDialog()">
+        <mat-icon> add </mat-icon> Add task
       </button>
     </div>
   </div>
