--- a/src/app/components/task-table/task-table.component.html
+++ b/src/app/components/task-table/task-table.component.html
@@ -1,8 +1,33 @@
 <ng-container>
-  <div class="d-flex flex-column">
-    <mat-form-field>
-      <input matInput placeholder="Filter Status/Priority" #input />
-    </mat-form-field>
+  <div class="d-flex flex-column  ">
+    <div class="row mb-3  ">
+      <div class="col-6">
+        <h3>Filter by Priority</h3>
+        <mat-button-toggle-group
+          name="ingredients"
+          aria-label="Ingredients"
+          multiple
+          (change) = "filter($event)"
+          [(ngModel)]="priorityFilters"
+        >
+          <mat-button-toggle *ngFor="let value of getPriority" [value]="value">{{value}}</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+
+      <div class="col-6">
+        <h3>Filter by Status</h3>
+
+        <mat-button-toggle-group
+          name="ingredients"
+          aria-label="Ingredients"
+          multiple
+          (change) = "filter($event)"
+          [(ngModel)]="statusFilters"
+        >
+        <mat-button-toggle *ngFor="let value of getStatus" [value]="value">{{value}}</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+    </div>
 
     <div class="mat-elevation-z8">
       <div class="spinner-container" *ngIf="loading">
@@ -41,19 +66,7 @@
         <ng-container matColumnDef="admin">
           <th mat-header-cell mat-sort-header *matHeaderCellDef>Admin Panel</th>
           <td mat-cell *matCellDef="let task">
-            
-            <div class="d-flex justify-content-between" >
-              <button mat-mini-fab color="primary" aria-label="Edit task" (click)="editTask(task)">
-                <mat-icon> edit </mat-icon>
-              </button>
-      
-              <button mat-mini-fab color="warn" aria-label="Delete task" (click)="deleteTask(task)">
-                <mat-icon> delete </mat-icon>
-              </button>
-            </div>
-
-
-
+            <app-task-table-admin-panel [task]="task" (delete)="deleteTask($event)" (edit)="editTask($event)" ></app-task-table-admin-panel>
           </td>
         </ng-container>
 
@@ -71,22 +84,30 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-
-
     </div>
 
     <div class="d-flex gap-3 mt-3 justify-content-between">
       <div class="d-flex gap-2">
-        <button mat-raised-button color="warn" [disabled]="dataTask.length == 0" (click)="handleDeleteTasks()">
+        <button
+          mat-raised-button
+          color="warn"
+          [disabled]="dataTask.length == 0"
+          (click)="handleDeleteTasks()"
+        >
           <mat-icon> delete </mat-icon> Delete all
         </button>
 
-        <button mat-raised-button color="green" [disabled]="dataTask.length == 0" (click)="handleDoneTasks()">
+        <button
+          mat-raised-button
+          color="green"
+          [disabled]="dataTask.length == 0"
+          (click)="handleDoneTasks()"
+        >
           <mat-icon> done </mat-icon> Done all
         </button>
       </div>
 
-      <button mat-raised-button color="primary"  (click)="openDialog()">
+      <button mat-raised-button color="primary" (click)="openDialog()">
         <mat-icon> add </mat-icon> Add task
       </button>
     </div>
