--- a/src/app/components/task-table/task-table.component.html
+++ b/src/app/components/task-table/task-table.component.html
@@ -1,33 +1,34 @@
 <ng-container>
   <div class="d-flex flex-column  ">
-    <div class="row mb-3  ">
-      <div class="col-6">
-        <h3>Filter by Priority</h3>
-        <mat-button-toggle-group
-          name="ingredients"
-          aria-label="Ingredients"
-          multiple
-          (change) = "filter($event)"
-          [(ngModel)]="priorityFilters"
-        >
-          <mat-button-toggle *ngFor="let value of getPriority" [value]="value">{{value}}</mat-button-toggle>
-        </mat-button-toggle-group>
+      <div class="d-flex justify-content-between mb-3  ">
+        <div >
+          <h3>Filter by Priority</h3>
+          <mat-button-toggle-group
+            name="ingredients"
+            aria-label="Ingredients"
+            multiple
+            (change) = "filter($event)"
+            [(ngModel)]="priorityFilters"
+          >
+            <mat-button-toggle *ngFor="let value of getPriority" [value]="value">{{value}}</mat-button-toggle>
+          </mat-button-toggle-group>
+        </div>
+  
+        <div >
+          <h3>Filter by Status</h3>
+  
+          <mat-button-toggle-group
+            name="ingredients"
+            aria-label="Ingredients"
+            multiple
+            (change) = "filter($event)"
+            [(ngModel)]="statusFilters"
+          >
+          <mat-button-toggle *ngFor="let value of getStatus" [value]="value">{{value}}</mat-button-toggle>
+          </mat-button-toggle-group>
+        </div>
       </div>
 
-      <div class="col-6">
-        <h3>Filter by Status</h3>
-
-        <mat-button-toggle-group
-          name="ingredients"
-          aria-label="Ingredients"
-          multiple
-          (change) = "filter($event)"
-          [(ngModel)]="statusFilters"
-        >
-        <mat-button-toggle *ngFor="let value of getStatus" [value]="value">{{value}}</mat-button-toggle>
-        </mat-button-toggle-group>
-      </div>
-    </div>
 
     <div class="mat-elevation-z8">
       <div class="spinner-container" *ngIf="loading">
